fix(vtooltip): make tooltip activator visible on SSR initial render

--- a/packages/vuetify/src/components/VTooltip/VTooltip.sass
+++ b/packages/vuetify/src/components/VTooltip/VTooltip.sass
@@ -1,8 +1,6 @@
 @import ./_variables
 
 .v-tooltip
-  display: none
-
   &--attached
     display: inline
 
